--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@ Experience :- five years as theatre practitioner
 <br>
 film Experience:- The Shoe Box , Agent ,
 <br>
-Skills:- Website designing , driving , swiming , Acting , DANCING ..Etc 
-
+Skills:- Website designing , Driving , Swiming , Acting , Dancing ..Etc 
+<br>
+Hobbies:- Learn new things , Reading , Singing , Playing Football , Gym ..Etc
+<br>
 Email:- vatssatyam2002@gmail.com
 
 </div>
