--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@ Name :- Satyam Mishra
 <br> 
 Age :-23
 <br>
-height:- 5'9
+Height:- 5'9
 <br>
 Experience :- five years as theatre practitioner
  <br>
  Education:- persuing LLB
 <br>
-film Experience:- The Shoe Box , Agent ,
+Film Experience:- The Shoe Box , Agent ,
 <br>
 Skills:- Website designing , Driving , Swiming , Acting , Dancing ..Etc 
 <br>
