--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CMS SATYAM MISHRA </title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style-mobile.css">
 </head>
 <body>
+    <div class="mediaquries">
     <center><header> <H1> CMS SATYAM MISHRA </H1></header></center>
     <br> <br> <br> <br><br> <br>
     <hr>
@@ -18,29 +20,35 @@
    <h2> About </h2>
    <hr>
    <div class="paragraph">
-<p><em>Satyam Mishra</em>, also known as <em>CMS</em>, is an indian actor and model from Mirzapur, Prayagraj. He has been passionate about acting and performing arts since his childhood, when he participated in school plays and college functions. He has also done theatre for five years and worked in films such as The Shoe Box and Agent. He is a creative, passionate, and hard-working artist who wants to work on projects that challenge him and make a positive impact on the world. He also wants to inspire others to follow their dreams. CMS stands for Creativity of My Self-Zone, which reflects his belief that creativity is the source of his energy and identity. It does not belong to any caste, religion, or anything else as an artist. He wants to present India to the world through his cinema.</p>
-</div>
-<br><br>
-<h2>Portfolio details</h2>
-<hr>
-<div class="profile">
-<p>
-Name :- Satyam Mishra
-<br> 
-Age :-23
-<br>
-height:- 5'9
-<br>
-Experience :- five years as theatre practitioner
- <br>
- Education:- persuing LLB
-<br>
-film Experience:- The Shoe Box , Agent ,
-<br>
-Skills:- Website designing , driving , swiming , Acting , DANCING ..Etc 
-
-Email:- vatssatyam2002@gmail.com
-
+    
+    <p><em>Satyam Mishra</em>, also known as <em>CMS</em>, is an indian actor and model from Mirzapur, Prayagraj. He has been passionate about acting and performing arts since his childhood, when he participated in school plays and college functions. He has also done theatre for five years and worked in films such as The Shoe Box and Agent. He is a creative, passionate, and hard-working artist who wants to work on projects that challenge him and make a positive impact on the world. He also wants to inspire others to follow their dreams.</p>
+    <br>
+     CMS stands for Creativity of My Self-Zone, which reflects his belief that creativity is the source of his energy and identity. It does not belong to any caste, religion, or anything else as an artist. He wants to present India to the world through his cinema.</p>
+    </div>
+    <br><br>
+    <h2>Portfolio details</h2>
+    <hr>
+    <div class="profile">
+    <p>
+    Name :- Satyam Mishra
+    <br> 
+    Age :-23
+    <br>
+    Height:- 5'9
+    <br>
+    Experience :- five years as theatre practitioner
+     <br>
+     Education:- persuing LLB
+    <br>
+    Film Experience:- The Shoe Box , Agent ,
+    <br>
+    Skills:- Website designing , Driving , Swiming , Acting , Dancing ..Etc 
+    <br>
+    Hobbies:- Learn new things , Reading , Singing , Playing Football, Cricket, Gym ..Etc
+    <br>
+    Fav-Film/Series :- Steve Jobs ,M.S Dhoni , Iron-Man , Titanic , GOT , Inception ..Etc
+    <br>
+    Email:- vatssatyam2002@gmail.com
 </div>
 </p>
 <div class="folio">
